fixed  layout issues

--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -236,6 +236,7 @@
     flex: 0 0 auto;
     margin-right: 0.5rem;
     flex-shrink: 0;
+    justify-content: space-between;
   }
   @media (max-width: 768px) {
     .top-card:nth-child(n+6) {
