--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,11 @@ router-outlet + * {
   }
   
 
+  img, video, .slider, .swiper, .background-image {
+    max-width: 100%;
+    overflow: hidden;
+  }
+  
 body{
     overflow-x: hidden;
     background-color: $bgColor;
